# test-assignments

./: LICENSE
convious/: .env.example  .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  FEEDBACK.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
convious/backend/: .dockerignore  Dockerfile  Dockerfile.production  docker-entrypoint.sh  manage.py  pyproject.toml
convious/backend/lunchvote/: asgi.py  celery.py  conftest.py  settings.py  urls.py  wsgi.py
convious/backend/lunchvote/api/: apps.py  schema.py
convious/backend/lunchvote/api/schema/: __init__.py  jwt.py  restaurants.py  users.py  votes.py
convious/backend/lunchvote/home/: apps.py  urls.py
convious/backend/lunchvote/home/templates/home/: index.html
convious/backend/lunchvote/lib/: models.py  registry.py  reversion.py  tasks.py
convious/backend/lunchvote/restaurants/: apps.py  models.py  services.py
convious/backend/lunchvote/restaurants/fixtures/: initial_data.json
convious/backend/lunchvote/restaurants/migrations/: 0001_initial.py
convious/backend/lunchvote/restaurants/tests/: factories.py  test_restaurants.py
convious/backend/lunchvote/users/: admin.py  apps.py
convious/backend/lunchvote/users/fixtures/: initial_data.json
convious/backend/lunchvote/users/migrations/: 0001_initial.py
convious/backend/lunchvote/users/models/: user.py
convious/backend/lunchvote/users/tests/: factories.py  test_users.py
convious/backend/lunchvote/votes/: apps.py  models.py  services.py
convious/backend/lunchvote/votes/migrations/: 0001_initial.py
convious/backend/lunchvote/votes/tests/: factories.py  test_votes.py
convious/scripts/: bootstrap.sh  changelog.sh  load-db.sh  release.sh  reset-db.sh  update-initial-data-fixtures.sh
nord_security/: ASSIGNMENT.md  FEEDBACK.md
planner5d/: .pre-commit-config.yaml  FEEDBACK.md  Pipfile  README.md  pyproject.toml
planner5d/p5d_scraper/: __main__.py  models.py  scraper.py  server.py  utils.py  worker.py
planner5d/p5d_scraper/tests/: conftest.py  test_scraper.py  test_worker.py
