[project]
requires-python = ">=3.12"


[tool.ruff]
line-length = 79
target-version = "py312"


[tool.ruff.lint]
extend-select = ["E501"]

# https://beta.ruff.rs/docs/rules/
select = [
  # rules from pyflakes
  "F",

  # rules from pycodestyle
  "E", "W",

  # rules from mccabe
  "C90",

  # rules from isort
  "I",

  # rules from pyupgrade
  "UP",

  # rules from flake8-2020
  "YTT",

  # rules from flake8-annotations
  "ANN",

  # rules from flake8-bandit
  "S",

  # rules from flake8-blind-except
  "BLE",

  # rules from flake8-boolean-trap
  "FBT",

  # rules from flake8-bugbear
  "B",

  # rules from flake8-builtins
  "A",

  # rules from flake8-commas
  "COM",

  # rules from flake8-comprehensions
  "C4",

  # rules from flake8-datetimez
  "DTZ",

  # rules from flake8-debugger
  "T10",

  # rules from flake8-errmsg
  "EM",

  # rules from flake8-executable
  "EXE",

  # rules from flake8-implicit-str-concat
  "ISC",

  # rules from flake8-import-conventions
  "ICN",

  # rules from flake8-logging-format
  "G",

  # rules from flake8-no-pep420
  "INP",

  # rules from flake8-pie
  "PIE",

  # rules from flake8-print
  "T20",

  # rules from flake8-pyi
  "PYI",

  # rules from flake8-pytest-style
  "PT",

  # rules from flake8-raise
  "RSE",

  # rules from flake8-return
  "RET",

  # rules from flake8-self
  "SLF",

  # rules from flake8-simplify
  "SIM",

  # rules from flake8-tidy-imports
  "TID",

  # rules from flake8-type-checking
  "TCH",

  # rules from flake8-gettext
  "INT",

  # rules from flake8-unused-arguments
  "ARG",

  # rules from flake8-use-pathlib
  "PTH",

  # removes unused noqa comments
  "RUF100",
]

ignore = [
  "ANN101", # missing type annotation for self in methods
  "COM812", # conflicts with formatter
  "ISC001", # conflicts with formatter
]


[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"


[tool.ruff.lint.per-file-ignores]
# ignore assert statements in tests
"test_*.py" = ["S101"]
